[package]
name = "kani2_kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x86_64 = "0.15.1"
spin = "0.9.8"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
linked_list_allocator = "0.10.5"
bitmaps = { version = "3.2.1", default-features = false }

kani2_common = { path = "../common" }

[features]
qemu = []
