[package]
name = "kani2_loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = { version = "0.14.0", features = ["alloc", "exts"] }
uefi-services = "0.11.0"
goblin = { version = "0.5.1", default-features = false, features = ["elf64", "endian_fd", "elf32"] }